--- a/src/components/Popup.less
+++ b/src/components/Popup.less
@@ -60,13 +60,11 @@
         &.popup__content_padding_medium {
           margin: 40px;
           max-width: calc(~"100vw - 80px");
-          max-height: calc(~"100vh - 80px");
         }
 
         &.popup__content_padding_large {
           margin: 0 80px;
           max-width: calc(~"100vw - 160px");
-          max-height: calc(~"100vh - 160px");
         }
       }
     }
